--- a/public/index.html
+++ b/public/index.html
@@ -5,71 +5,411 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: Arial, sans-serif;
-      max-width: 800px;
-      margin: 50px auto;
+      max-width: 900px;
+      margin: 0 auto;
       padding: 20px;
+      background-color: #f5f5f5;
     }
+
+    .container {
+      background-color: white;
+      border-radius: 8px;
+      padding: 30px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+
+    h1 {
+      color: #333;
+      margin-top: 0;
+    }
+
+    .description {
+      color: #666;
+      margin-bottom: 30px;
+    }
+
     .form-group {
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
+
     label {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
+      font-weight: bold;
+      color: #333;
+    }
+
+    select, textarea {
+      width: 100%;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-family: Arial, sans-serif;
+    }
+
+    select:hover, textarea:hover {
+      border-color: #999;
+    }
+
+    select:focus, textarea:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.1);
+    }
+
+    select:disabled, textarea:disabled {
+      background-color: #f0f0f0;
+      color: #999;
+      cursor: not-allowed;
+    }
+
+    textarea {
+      min-height: 150px;
+      resize: vertical;
+      font-family: Arial, sans-serif;
+    }
+
+    .template-info {
+      padding: 12px;
+      background-color: #f9f9f9;
+      border-left: 4px solid #007bff;
+      border-radius: 4px;
+      margin-top: 8px;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .template-info.hidden {
+      display: none;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      padding: 12px 30px;
+      font-size: 16px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background-color 0.2s;
+    }
+
+    button:hover:not(:disabled) {
+      background-color: #0056b3;
+    }
+
+    button:disabled {
+      background-color: #ccc;
+      cursor: not-allowed;
+    }
+
+    .button-container {
+      display: flex;
+      gap: 10px;
+    }
+
+    .spinner {
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      border: 3px solid #f3f3f3;
+      border-top: 3px solid #007bff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin-right: 8px;
+      vertical-align: middle;
+    }
+
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+
+    .loading-state {
+      display: none;
+      padding: 15px;
+      background-color: #e7f3ff;
+      border: 1px solid #b3d9ff;
+      border-radius: 4px;
+      margin-top: 20px;
+      color: #004085;
       font-weight: bold;
     }
-    select {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
+
+    .loading-state.show {
+      display: block;
+    }
+
+    .result-area {
+      margin-top: 20px;
+    }
+
+    .success-message {
+      display: none;
+      padding: 15px;
+      background-color: #d4edda;
+      border: 1px solid #c3e6cb;
       border-radius: 4px;
+      color: #155724;
+    }
+
+    .success-message.show {
+      display: block;
+    }
+
+    .error-message {
+      display: none;
+      padding: 15px;
+      background-color: #f8d7da;
+      border: 1px solid #f5c6cb;
+      border-radius: 4px;
+      color: #721c24;
+    }
+
+    .error-message.show {
+      display: block;
+    }
+
+    .download-link {
+      display: inline-block;
+      color: #0056b3;
+      text-decoration: underline;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .download-link:hover {
+      color: #003d82;
+    }
+
+    #download-anchor {
+      display: none;
     }
   </style>
 </head>
 <body>
-  <h1>Mx Template Generator</h1>
-  <p>Select a baseline template to get started.</p>
+  <div class="container">
+    <h1>Mx Template Generator</h1>
+    <p class="description">Select a baseline template, describe the changes you want, and generate your customized template.</p>
 
-  <div class="form-group">
-    <label for="template-select">Baseline Template:</label>
-    <select id="template-select">
-      <option value="">Loading templates...</option>
-    </select>
+    <form id="generator-form">
+      <div class="form-group">
+        <label for="template-select">Baseline Template:</label>
+        <select id="template-select" required>
+          <option value="">Loading templates...</option>
+        </select>
+        <div id="template-info" class="template-info hidden"></div>
+      </div>
+
+      <div class="form-group">
+        <label for="request-textarea">Describe the changes you want:</label>
+        <textarea
+          id="request-textarea"
+          placeholder="Describe the changes you want to make to the template..."
+          required
+        ></textarea>
+      </div>
+
+      <div class="button-container">
+        <button type="submit" id="generate-button">Generate Template</button>
+      </div>
+    </form>
+
+    <div class="loading-state" id="loading-state">
+      <span class="spinner"></span>
+      <span>Generating your template...</span>
+    </div>
+
+    <div class="result-area">
+      <div class="success-message" id="success-message">
+        <strong>Success!</strong> Your template has been generated.
+        <br><br>
+        <a href="#" class="download-link" id="download-link">Download template</a>
+      </div>
+
+      <div class="error-message" id="error-message"></div>
+    </div>
   </div>
 
+  <a id="download-anchor" href="#"></a>
+
   <script>
+    // Store template data for display
+    let templatesData = {};
+    let generatedTemplate = null;
+
     // Load templates from API when page loads
     document.addEventListener('DOMContentLoaded', async () => {
+      await loadTemplates();
+      setupFormHandlers();
+    });
+
+    async function loadTemplates() {
       try {
         const response = await fetch('/api/templates');
         const templates = await response.json();
 
         const select = document.getElementById('template-select');
-
-        // Clear loading message
         select.innerHTML = '';
 
-        // Add placeholder option
         const placeholder = document.createElement('option');
         placeholder.value = '';
         placeholder.textContent = '-- Select a template --';
         select.appendChild(placeholder);
 
-        // Add template options
         templates.forEach(template => {
           const option = document.createElement('option');
           option.value = template.id;
           option.textContent = template.name;
           select.appendChild(option);
+          templatesData[template.id] = template;
         });
       } catch (error) {
         console.error('Error loading templates:', error);
         const select = document.getElementById('template-select');
         select.innerHTML = '<option value="">Error loading templates</option>';
       }
-    });
+    }
+
+    function setupFormHandlers() {
+      const form = document.getElementById('generator-form');
+      const templateSelect = document.getElementById('template-select');
+      const templateInfo = document.getElementById('template-info');
+
+      // Handle template selection
+      templateSelect.addEventListener('change', async (e) => {
+        if (e.target.value) {
+          try {
+            const response = await fetch(`/api/templates/${e.target.value}`);
+            const template = await response.json();
+
+            // Display template info
+            templateInfo.innerHTML = `
+              <strong>${template.title || 'Template'}</strong>
+            `;
+            templateInfo.classList.remove('hidden');
+          } catch (error) {
+            console.error('Error loading template details:', error);
+            templateInfo.innerHTML = 'Error loading template details';
+            templateInfo.classList.remove('hidden');
+          }
+        } else {
+          templateInfo.classList.add('hidden');
+        }
+      });
+
+      // Handle form submission
+      form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        await generateTemplate();
+      });
+
+      // Handle download link
+      document.getElementById('download-link').addEventListener('click', (e) => {
+        e.preventDefault();
+        downloadTemplate();
+      });
+    }
+
+    async function generateTemplate() {
+      const templateId = document.getElementById('template-select').value;
+      const request = document.getElementById('request-textarea').value;
+      const loadingState = document.getElementById('loading-state');
+      const successMessage = document.getElementById('success-message');
+      const errorMessage = document.getElementById('error-message');
+      const form = document.getElementById('generator-form');
+
+      // Validate inputs
+      if (!templateId) {
+        errorMessage.innerHTML = 'Please select a template';
+        errorMessage.classList.add('show');
+        successMessage.classList.remove('show');
+        return;
+      }
+
+      if (!request.trim()) {
+        errorMessage.innerHTML = 'Please describe the changes you want';
+        errorMessage.classList.add('show');
+        successMessage.classList.remove('show');
+        return;
+      }
+
+      // Hide previous messages and show loading
+      errorMessage.classList.remove('show');
+      successMessage.classList.remove('show');
+      loadingState.classList.add('show');
+
+      // Disable form inputs during generation
+      form.querySelectorAll('input, textarea, select, button').forEach(el => {
+        el.disabled = true;
+      });
+
+      try {
+        const response = await fetch('/api/generate', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({
+            templateId: templateId,
+            request: request
+          })
+        });
+
+        if (!response.ok) {
+          const errorData = await response.json();
+          throw new Error(errorData.error || 'Generation failed');
+        }
+
+        const result = await response.json();
+
+        if (result.success) {
+          generatedTemplate = result;
+          loadingState.classList.remove('show');
+          successMessage.classList.add('show');
+          errorMessage.classList.remove('show');
+        } else {
+          throw new Error(result.error || 'Generation failed');
+        }
+      } catch (error) {
+        console.error('Error generating template:', error);
+        loadingState.classList.remove('show');
+        errorMessage.innerHTML = `Error: ${error.message}`;
+        errorMessage.classList.add('show');
+        successMessage.classList.remove('show');
+      } finally {
+        // Re-enable form inputs
+        form.querySelectorAll('input, textarea, select, button').forEach(el => {
+          el.disabled = false;
+        });
+      }
+    }
+
+    function downloadTemplate() {
+      if (!generatedTemplate || !generatedTemplate.filename) {
+        alert('No template to download');
+        return;
+      }
+
+      const jsonString = JSON.stringify(generatedTemplate.template, null, 2);
+      const blob = new Blob([jsonString], { type: 'application/json' });
+      const url = URL.createObjectURL(blob);
+
+      const anchor = document.getElementById('download-anchor');
+      anchor.href = url;
+      anchor.download = generatedTemplate.filename;
+      anchor.click();
+
+      URL.revokeObjectURL(url);
+    }
   </script>
 </body>
 </html>
