fix(timeout): increase timeout to 3 minutes for large templates
- Server: Claude API timeout increased from default to 180s
- Client: Fetch timeout increased from 60s to 180s
- Large templates (2MB+) need more processing time

--- a/public/index.html
+++ b/public/index.html
@@ -353,9 +353,9 @@
       });
 
       try {
-        // Create timeout promise (60 seconds for Claude API calls)
+        // Create timeout promise (3 minutes for large templates)
         const timeoutPromise = new Promise((_, reject) => {
-          setTimeout(() => reject(new Error('Request timed out after 60 seconds')), 60000);
+          setTimeout(() => reject(new Error('Request timed out after 3 minutes')), 180000);
         });
 
         // Race between fetch and timeout
